--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,8 +1,14 @@
 ---
-title: Quick start
+title: Trout documentation
 description: Learn how to use Trout to develop with webhooks
 ---
 
+import { Card } from "@astrojs/starlight/components";
+
 Welcome to the Trout documentation!
 
-Here is a quick start on how to use Trout.
+<Card title="Tutorial">
+  The fastest way to get started.
+  <br />
+  <a href="/tutorial">Go to tutorial</a>
+</Card>
