--- a/packages/docs/src/content/docs/tutorial/index.mdx
+++ b/packages/docs/src/content/docs/tutorial/index.mdx
@@ -16,6 +16,14 @@ In this tutorial, we will walk through the following:
 
 ## Creating a source
 
+In the UI, click on the "Sources" tab. Then click on the "Create new source" button.
+
+<video src="/create-source.mp4" controls />
+
+If you click the actions menu, you'll see some options, including "Copy webhook URL". You can try to send a CURL request to this URL to see it in action.
+
+<video src="/copy-url.mp4" controls />
+
 ## Installing the CLI
 
 ```
@@ -38,3 +46,7 @@ trout listen --source xxxxx
 
 - Trout is currently in beta. It is not certified for use in production.
 - Trout is currently aimed at indie developers. For complex webhook flows, you may need to use a different tool. Consider Convoy or Hookdeck.
+
+```
+
+```
