--- a/packages/docs/src/content/docs/tutorial/index.mdx
+++ b/packages/docs/src/content/docs/tutorial/index.mdx
@@ -2,7 +2,11 @@
 title: Get started
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { Card } from "@astrojs/starlight/components";
+
+<Card icon="warning" color="goldenrod" title="Note">
+  This tutorial is still being written.
+</Card>
 
 ## Introduction
 
