--- a/packages/docs/src/content/docs/tutorial/index.mdx
+++ b/packages/docs/src/content/docs/tutorial/index.mdx
@@ -28,6 +28,8 @@ If you click the actions menu, you'll see some options, including "Copy webhook 
 
 <video src="/copy-url.mp4" controls />
 
+<video src="/curl-url.mp4" controls />
+
 ## Installing the CLI
 
 ```
