--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -1,14 +1,21 @@
 ---
-title: Trout documentation
+title: Welcome to the Trout docs
 description: Learn how to use Trout to develop with webhooks
 ---
 
-import { Card } from "@astrojs/starlight/components";
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
-Welcome to the Trout documentation!
+Trout is a developer-friendly platform that simplifies webhook integration. Easily create sources with unique URLs for webhook senders like Stripe, Clerk, and Twilio. Establish connections between sources and sinks to effortlessly route webhook events to their intended destinations.
 
-<Card title="Tutorial">
-  The fastest way to get started.
-  <br />
-  <a href="/tutorial">Go to tutorial</a>
-</Card>
+What sets Trout apart is its seamless support for localhost development. With a simple local CLI, you can listen to events delivered to a source, making testing and development a breeze. No more worries about persistent URLs - Trout has got you covered!
+
+Whether you're an experienced developer or just starting out, Trout's intuitive documentation will guide you through the process, helping you streamline webhook integration like a pro. Get started with Trout today and take your webhook handling to the next level!
+
+<CardGrid>
+  <Card title="Tutorial">
+    <a href="/tutorial">Start your journey with Trout here 👉</a>
+  </Card>
+  <Card title="Learn">
+    <a href="/learn">Learn about the main concepts behind Trout 👉</a>
+  </Card>
+</CardGrid>
