--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -13,9 +13,9 @@ Whether you're an experienced developer or just starting out, Trout's intuitive 
 
 <CardGrid>
   <Card title="Tutorial">
-    <a href="/tutorial">Start your journey with Trout here 👉</a>
+    <a href="/tutorial">Get started&nbsp;&nbsp;👉</a>
   </Card>
   <Card title="Learn">
-    <a href="/learn">Learn about the main concepts behind Trout 👉</a>
+    <a href="/learn">Learn about the main concepts&nbsp;&nbsp;👉</a>
   </Card>
 </CardGrid>
