--- a/packages/docs/src/content/docs/learn/index.mdx
+++ b/packages/docs/src/content/docs/learn/index.mdx
@@ -32,3 +32,7 @@ The primary purpose of webhooks is to streamline data synchronization and keep m
 ## Webhooks with Trout
 
 Trout acts as both a receiver and sender in this process. It receives webhooks with sources, and sends them onward to sinks. With Trout's webhook relay service, developers can harness the power of webhooks to effortlessly route and manage data, simplifying their webhook integration workflows.
+
+## Further reading
+
+- https://zapier.com/blog/what-are-webhooks/
